--- a/biblio.bib
+++ b/biblio.bib
@@ -81,3 +81,18 @@
   journal={arXiv preprint arXiv:{1709.03856}},
   year={2017}
 }
+
+@ARTICLE{Ya91,
+    author = {Yaniv, I. and Yates, J.F. },
+    title = {Measures of Discrimination Skill in Probabilistic Judgment},
+    journal = {Psychological Bulletin},
+    year = {1991},
+    volume = {110},
+    pages = {611-617}
+}
+
+@MISC{wiki15,
+    title = {wikipedia},
+    howpublished = {https://en.wikipedia.org/wiki/Brier\_score},
+    note = {accessed: 2015-12}
+}
